[package]
name = "fuzzing_lib"
version = "0.1.0"
authors = ["mellowCS <cs.germany@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
hex = "0.4.3"
rand = "0.8.3"

[lib]
name = "fuzzing_lib"